alignment fixed

--- a/css/landingPageStyle.css
+++ b/css/landingPageStyle.css
@@ -48,9 +48,14 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #FEF5ED;
 }
 
-.navbar {
+.navbar{
   padding-left: 0;
   padding-right: 0;
+}
+
+.hamburger-menu .navbar {
+  padding-left: 7%;
+  padding-right: 7%;
   color: #362706;
 }
 
@@ -63,6 +68,15 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 1.5em;
   margin: 0 auto;
   letter-spacing: 0.1em;
+}
+
+/* .collapse .nav-item{
+  padding-right: 5%;
+} */
+
+div.col-sm-6.title-text{
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .title {
@@ -133,30 +147,32 @@ h1, h2, h3, h4, h5, h6 {
 .category{
   padding: 0 7% 5%;
 }
-/* .category-card{
-  height:auto;
-} */
+.category-card-row{
+  margin: 0;
+}
 .category-title{
   padding: 2% 0;
   letter-spacing: 0.1em;
 }
 
-/* .card-img-top {
+.card-img-top {
     width: 100%;
-    height: 50%;
-    overflow: hidden;
     object-fit: cover;
     object-position: center;
-} */
+}
 
-.card-img-top {
+/* .card-img-top {
     max-height: 200px;
     min-height: 150px;
     object-fit: cover;
-}
+} */
 
 .plant-care{
   padding: 0 7% 5%;
+}
+
+.plant-care-row{
+  margin: 0;
 }
 
 .care-title{
@@ -197,7 +213,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .press-logo{
-  width: 90%;
+  width: 80%;
 }
 
 #pricing{
@@ -266,6 +282,48 @@ h1, h2, h3, h4, h5, h6 {
 .copyright{
   padding-bottom: 3%;
   margin-bottom: 0;
+}
+
+@media (max-width: 576px){
+  .hamburger-menu{
+    padding-left: 1% 7%;
+  }
+
+  .story-img-container{
+    padding-left: 0;
+  }
+
+  .story-img{
+    margin: 0 auto;
+  }
+
+  .category-card-row{
+    margin: 0;
+  }
+
+  .plant-care-row .col-sm-6{
+    padding-bottom: 4%;
+  }
+
+  .plant-care-img{
+    width: 100%;
+  }
+
+  .press-container{
+    padding: 3% 0;
+  }
+
+  .press-logo{
+    width: 60%;
+  }
+
+  .pricing-cards .col-sm-4{
+    padding-bottom: 4%;
+  }
+
+  .footer-row .nav-col{
+    padding-top: 5%;
+  }
 }
 
 .sign-up-title{
